<?php

namespace App\Http\Controllers;

use App\Http\Controllers\Concerns\InvalidatesPredictionCache;
use App\Http\Requests\StoreProductRequest;
use App\Http\Requests\UpdateProductRequest;
use App\Models\Product;
use Illuminate\Http\Request;

class ProductController extends Controller
{
    use InvalidatesPredictionCache;

    /**
     * Display a listing of the resource.
     */
    public function index(Request $request)
    {
        $search = $request->has('search') ? $request->query('search') : session('product_search');

        session(['product_search' => $search]);

        $products = Product::query()
            ->when($search, function ($query, $search) {
                $query->where(function ($q) use ($search) {
                    $q->where('code', 'like', "%{$search}%")
                        ->orWhere('name', 'like', "%{$search}%")
                        ->orWhere('category', 'like', "%{$search}%")
                        ->orWhere('size', 'like', "%{$search}%");
                });
            })
            ->orderBy('name')
            ->paginate(10)
            ->appends(['search' => $search]);

        if ($request->ajax()) {
            return view('products._table', compact('products', 'search'));
        }

        return view('products.index', compact('products', 'search'));
    }

    /**
     * Show the form for creating a new resource.
     */
    public function create()
    {
        return view('products.create');
    }

    /**
     * Store a newly created resource in storage.
     */
    public function store(StoreProductRequest $request)
    {
        Product::create($request->validated());

        $this->forgetPredictionCache();

        return redirect()->route('products.index')->with('success', 'Produk berhasil ditambahkan.');
    }

    /**
     * Show the form for editing the specified resource.
     */
    public function edit(Product $product)
    {
        return view('products.edit', compact('product'));
    }

    /**
     * Update the specified resource in storage.
     */
    public function update(UpdateProductRequest $request, Product $product)
    {
        $product->update($request->validated());

        $this->forgetPredictionCache();

        return redirect()->route('products.index')->with('success', 'Produk berhasil diperbarui.');
    }

    /**
     * Remove the specified resource from storage.
     */
    public function destroy(Product $product)
    {
        $product->delete();

        $this->forgetPredictionCache();

        return redirect()->route('products.index')->with('success', 'Produk berhasil dihapus.');
    }
}
